# zukiru

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE-APACHE  LICENSE-MIT  README.md  vcpkg.json
engine/: CMakeLists.txt
engine/modules/app/: CMakeLists.txt  README.md
engine/modules/app/include/zuki/app/: app.hpp  application.hpp
engine/modules/app/include/zukiru/app/: app.hpp  application.hpp
engine/modules/app/src/: app.cpp
engine/modules/app/tests/: app_test.cpp
engine/modules/assets/: CMakeLists.txt  README.md
engine/modules/assets/include/zuki/assets/: asset.hpp  asset_id.hpp  asset_manager.hpp  assets.hpp
engine/modules/assets/include/zukiru/assets/: asset.hpp  asset_id.hpp  asset_manager.hpp  assets.hpp
engine/modules/assets/src/: asset_manager.cpp
engine/modules/assets/tests/: assets_test.cpp
engine/modules/containers/: CMakeLists.txt  README.md
engine/modules/containers/include/zuki/containers/: containers.hpp  ring_buffer.hpp  slot_map.hpp  sparse_set.hpp
engine/modules/containers/include/zukiru/containers/: containers.hpp  ring_buffer.hpp  slot_map.hpp  sparse_set.hpp
engine/modules/containers/tests/: ring_buffer_test.cpp  slot_map_test.cpp  sparse_set_test.cpp
engine/modules/core/: CMakeLists.txt  README.md
engine/modules/core/include/zuki/core/: assert.hpp  config.hpp  core.hpp  result.hpp  string_utils.hpp  time.hpp  types.hpp
engine/modules/core/include/zukiru/core/: assert.hpp  config.hpp  core.hpp  result.hpp  string_utils.hpp  time.hpp  types.hpp
engine/modules/core/src/: assert.cpp  config.cpp  string_utils.cpp  time.cpp
engine/modules/core/tests/: assert_test.cpp  config_test.cpp  result_test.cpp  string_utils_test.cpp  time_test.cpp  types_test.cpp
engine/modules/ecs/: CMakeLists.txt  README.md
engine/modules/ecs/include/zuki/ecs/: archetype.hpp  component.hpp  ecs.hpp  entity.hpp  world.hpp
engine/modules/ecs/include/zukiru/ecs/: archetype.hpp  component.hpp  ecs.hpp  entity.hpp  world.hpp
engine/modules/ecs/src/: archetype.cpp  world.cpp
engine/modules/ecs/tests/: ecs_test.cpp
engine/modules/event/: CMakeLists.txt  README.md
engine/modules/event/include/zuki/event/: event.hpp  event_bus.hpp
engine/modules/event/include/zukiru/event/: event.hpp  event_bus.hpp
engine/modules/event/tests/: event_bus_test.cpp
engine/modules/filesystem/: CMakeLists.txt  README.md
engine/modules/filesystem/include/zuki/filesystem/: filesystem.hpp  path.hpp  virtual_file_system.hpp
engine/modules/filesystem/include/zukiru/filesystem/: filesystem.hpp  path.hpp  virtual_file_system.hpp
engine/modules/filesystem/src/: path.cpp  virtual_file_system.cpp
engine/modules/filesystem/tests/: path_test.cpp  virtual_file_system_test.cpp
engine/modules/input/: CMakeLists.txt  README.md
engine/modules/input/include/zuki/input/: action_map.hpp  input.hpp  input_state.hpp  key_code.hpp  platform_bridge.hpp
engine/modules/input/include/zukiru/input/: action_map.hpp  input.hpp  input_state.hpp  key_code.hpp  platform_bridge.hpp
engine/modules/input/tests/: input_test.cpp  platform_bridge_test.cpp
engine/modules/jobs/: CMakeLists.txt  README.md
engine/modules/jobs/include/zuki/jobs/: job_system.hpp  jobs.hpp
engine/modules/jobs/include/zukiru/jobs/: job_system.hpp  jobs.hpp
engine/modules/jobs/src/: job_system.cpp
engine/modules/jobs/tests/: job_system_test.cpp
engine/modules/log/: CMakeLists.txt  README.md
engine/modules/log/include/zuki/log/: log.hpp  log_level.hpp  log_record.hpp  logger.hpp  sink.hpp
engine/modules/log/include/zukiru/log/: log.hpp  log_level.hpp  log_record.hpp  (+2 more)
engine/modules/log/src/: log_level.cpp  logger.cpp  sink.cpp
engine/modules/log/tests/: log_level_test.cpp  logger_test.cpp  sink_test.cpp
engine/modules/math/: CMakeLists.txt  README.md
engine/modules/math/tests/: geometry_test.cpp  mat_test.cpp  quat_test.cpp  scalar_test.cpp  transform_test.cpp  vec_test.cpp
engine/modules/memory/: CMakeLists.txt  README.md
engine/modules/memory/src/: arena_allocator.cpp  pool_allocator.cpp  stack_allocator.cpp
engine/modules/memory/tests/: alignment_test.cpp  arena_test.cpp  handle_test.cpp  pool_test.cpp  stack_test.cpp  tracking_test.cpp
engine/modules/platform/: CMakeLists.txt  README.md
engine/modules/platform/src/: clock.cpp  dynamic_library.cpp  file_io.cpp  thread.cpp  window.cpp
engine/modules/platform/src/backend/: keysym_to_key.hpp
engine/modules/platform/tests/: clock_test.cpp  dynamic_library_test.cpp  file_io_test.cpp  thread_test.cpp  window_test.cpp
engine/modules/reflect/: CMakeLists.txt  README.md
engine/modules/reflect/tests/: reflect_test.cpp
engine/modules/render/: CMakeLists.txt  README.md
engine/modules/render/src/: material.cpp  render_graph.cpp  rhi.cpp
engine/modules/render/src/vulkan/: triangle_shaders.hpp  vulkan_device.cpp  vulkan_device.hpp
engine/modules/render/tests/: camera_test.cpp  cube_shaders.hpp  fullscreen_shaders.hpp  material_test.cpp  mesh_shaders.hpp  primitives_test.cpp  render_graph_test.cpp  rhi_test.cpp  scene_shaders.hpp  tex_shaders.hpp  vulkan_smoke_test.cpp
engine/modules/render/tests/shaders/: cube.frag  cube.vert  fullscreen.frag  fullscreen.vert  mesh.vert  scene.frag  scene.vert  tex.frag  tex.vert
engine/modules/renderer/: CMakeLists.txt  README.md
engine/modules/renderer/src/: renderer.cpp
engine/modules/renderer/tests/: renderer_test.cpp
engine/modules/scene/: CMakeLists.txt  README.md
engine/modules/scene/src/: scene.cpp
engine/modules/scene/tests/: scene_test.cpp
games/sandbox/: CMakeLists.txt  README.md
games/sandbox/shaders/: scene.frag  scene.vert
games/sandbox/src/: main.cpp  sandbox_shaders.hpp
tests/: CMakeLists.txt  smoke_test.cpp
tools/shader_compiler/: CMakeLists.txt  README.md
tools/shader_compiler/include/zuki/shaderc/: shader_compiler.hpp
tools/shader_compiler/include/zukiru/shaderc/: shader_compiler.hpp
tools/shader_compiler/src/: main.cpp  shader_compiler.cpp
tools/shader_compiler/tests/: shader_compiler_test.cpp
(+96 files in other folders)
